[tool.poetry]
name = "the_guide"
version = "0.1.72"
description = ""
authors = ["Grai <dev@grai.io>"]
license = "Elastic-2.0"
readme = "README.md"
homepage = "https://www.grai.io/"
repository = "https://github.com/grai-io/grai-core/tree/master/grai-server"
documentation = "https://docs.grai.io/"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.2.0"}
drf-spectacular = "^0.27.1"
drf-nested-routers = "^0.93.4"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
django-phonenumber-field ={extras = ["phonenumberslite"], version = "^6.3.0"}
django-cors-headers = "^3.13.0"
social-auth-app-django = "^5.0.0"
django-celery-beat = "^2.4.0"
django-storages = "^1.13.2"
django-extensions = "^3.2"
djangorestframework-api-key = "^2"
django-permissions-policy = "^4.18.0"
django-health-check = "^3.17.0"
django_multitenant = "^3.0.0"
django-ses = "^3.3.0"
django-redis = "^5.3.0"
django-postgres-extra = "^2.0.8"
algoliasearch-django = "^3.0.0"
django-email-log = "^1.3.0"
django-celery-email = "^3.0.0"
django-query-chunk = "^0.0.1"
django-tqdm = "^1.3.1"
strawberry-graphql-django = "^0.35.1"
celery = "^5.2.7"
redis = "^4.4.0"
python-decouple = "^3.6"
psycopg2 = "^2.9.3"
posthog = "^3.0.1"
sentry-sdk = "^1.31.0"
ghapi = "^1.0.3"
grandalf = "^0.8"
retakesearch = "^0.1.32"
grai-schemas = "^0.2.10"
grai-client = "^0.3.2"
grai-graph = "^0.2.5"
grai-source-bigquery = "^0.2.4"
grai-source-flat-file = "^0.2.2"
grai-source-dbt = "^0.3.5"
grai-source-dbt-cloud = "^0.1.5"
grai-source-fivetran = "^0.1.2"
grai-source-looker = "^0.0.3"
grai-source-metabase = "^0.2.5"
grai-source-mssql = "^0.1.3"
grai-source-mysql =  "^0.1.1"
grai-source-openlineage = "^0.1.0a1"
grai-source-postgres = "^0.2.4"
grai-source-redshift =  "^0.1.1"
grai-source-snowflake = "^0.1.2"
types-redis = "^4.6.0.5"
django-otp = "^1.2.2"
qrcode = "^7.4.2"
channels = "^4.0.0"
channels-redis = "^4.1.0"
uvicorn = {version = "^0.28.1", extras = ["standard"]}
gunicorn = ">=21.2,<23.0"
strawberry-graphql = {extras = ["channels", "asgi"], version = "^0.220.0"}
asgi-cors-strawberry = "^0.2.0"
overrides = "^7.4.0"
openai = "^1.3.7"
tiktoken = "^0.6.0"
pgvector = "^0.2.4"
pyjwt = "^2.8.0"
django-csp = "^3.7"
multimethod = "^1.4.0, !=1.11.0"
grai-source-cube = "^0.0.2"
pympler = "^1.0.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^24.1.0"
pytest = "^8.1.1"
pytest-django = "^4.5.2"
django-stubs = "^1.12.0"
djangorestframework-stubs = "^1.7.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.10.0"
django-test-migrations = "^1.3.0"
coverage = "^7.2.7"
types-redis = "^4.6.0.6"
google-cloud-appengine-logging = "^1.3.1"
daphne = "^4.0.0"

[tool.isort]
profile = "black"
src_paths = ["*"]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "the_guide.settings.dev"
asyncio_mode = "auto"
# This is used in google dependencies which haven't been updated and which we don't control.
filterwarnings = [
    "ignore:.*declare_namespace\\('google\\..*'\\).*:DeprecationWarning:pkg_resources",
    "ignore:.*declare_namespace\\('google(\\\\.\\\\w+)?'\\).*:DeprecationWarning:pkg_resources"
]

[tool.poetry_bumpversion.file."the_guide/__init__.py"]
